examples/test/testpolicy18935.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18935
  namespace: namespace226
spec:
  podSelector:
    matchLabels:
      key46: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value21
      podSelector:
        matchLabels:
          key19: value40
          key35: value32
          key4: value38
